--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.14.8",
     "@emailjs/browser": "^3.4.0",
+    "@iconify/react": "^4.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.3.1",
@@ -15,6 +16,7 @@
     "@types/node": "^12.20.17",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "ityped": "^1.0.3",
     "react": "^17.0.2",
